<resources>
    <string name="app_name">MMartinez2740ex3b</string>

    <string name="action_settings">Settings</string>
    <string name="output1_prompt">#1: Num * 10 &lt; 100</string>
    <string name="output2_prompt">#2: Sum two numbers</string>
    <string name="output3_prompt">#3: Count by 10s</string>
    <string name="output4_prompt">4: Sum of numbers</string>
    <string name="input_prompt">Enter 10 numbers:</string>
    <string name="input_numbers">5 6 4 7 3 8 2 9 1 10</string>
    <string name="loop1_button_prompt">#1: Num * 10 &lt; 100</string>
    <string name="loop2_button_prompt">#2: Sum two numbers</string>
    <string name="loop3_button_prompt">#3: Count by 10s</string>
    <string name="loop4_button_prompt">#:4 Sum of numbers</string>
    <string name="MediumText">Medium Text</string>


</resources>
