<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.southeastmn.mmartinez.mmartinez2740ex3b.MMartinez3BMainActivity"
    tools:showIn="@layout/activity_mmartinez3_bmain"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_prompt"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/inputNumberseditText"
        android:layout_width="212dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_numbers"
        android:layout_marginStart="78dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="78dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="78dp" />

    <Button
        android:id="@+id/loop1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loop1_button_prompt"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/loop3Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberseditText" />

    <Button
        android:id="@+id/loop2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loop2_button_prompt"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="9dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/loop4Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberseditText" />

    <Button
        android:id="@+id/loop3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loop3_button_prompt"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/outputTextView" />

    <Button
        android:id="@+id/loop4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loop4_button_prompt"
        android:layout_marginRight="7dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/outputTextView" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="355dp"
        android:layout_height="271dp"
        tools:text="@string/MediumText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteX="20dp" />
</android.support.constraint.ConstraintLayout>
